--- a/docs/latex/Sistema_8h_source.tex
+++ b/docs/latex/Sistema_8h_source.tex
@@ -33,27 +33,35 @@
 \DoxyCodeLine{00030\ \ \ \ \ \textcolor{comment}{//\ Métodos}}
 \DoxyCodeLine{00031\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a5afc2279acc800dc7386e74e75477a33}{iniciar}}();}
 \DoxyCodeLine{00032\ \ \ \ \ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{classSistema_abf27cbfaa2d2ae35a750955cdc8dd175}{lerComando}}();}
-\DoxyCodeLine{00033\ }
-\DoxyCodeLine{00034\ \ \ \ \ \textcolor{comment}{//\ Comandos}}
-\DoxyCodeLine{00035\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a0277e9f6395f90f25827d3a8d55089df}{createUser}}(std::string\ args);}
-\DoxyCodeLine{00036\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a10a2cae24f39154b696c0f3491ee6196}{login}}(std::string\ args);}
-\DoxyCodeLine{00037\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a8a4109e22701b10eeddc0b53ce1a801d}{disconnect}}();}
-\DoxyCodeLine{00038\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_aa882f32bdbd0a9bad1d18d5343a3c20c}{createServer}}(std::string\ args);}
-\DoxyCodeLine{00039\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a9ee65dbd3c18fc0b1f489cadd9884dd3}{setServerDesc}}(std::string\ args);}
-\DoxyCodeLine{00040\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a6789cdac9e0bfa3927a21599afbc427c}{setServerInviteCode}}(std::string\ args);}
-\DoxyCodeLine{00041\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a871f17a5e6f360ed280b3cb2c97a7a49}{listServers}}();}
-\DoxyCodeLine{00042\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a13df10cdd549f93b79aca4b3a30046e7}{removeServer}}(std::string\ nome);}
-\DoxyCodeLine{00043\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_abdaf76b6b392965f647d73c1254e46a9}{enterServer}}(std::string\ args);}
-\DoxyCodeLine{00044\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a7adfe2bf239371ad84e61a90daf6b249}{leaveServer}}();}
-\DoxyCodeLine{00045\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a3621b304dfde121fc15d07c22ac57e7f}{listParticipants}}();}
-\DoxyCodeLine{00046\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_acb0dfef9e94f9a272b7bb793af76133e}{listChannels}}();}
-\DoxyCodeLine{00047\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a822164d7a54102aa37789e3c9d6fd17d}{createChannel}}(std::string\ args);}
-\DoxyCodeLine{00048\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_abe944780158601e61ed0276820ddaeee}{enterChannel}}(std::string\ args);}
-\DoxyCodeLine{00049\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_ac70d6ec3709c158c28e801586a71aab0}{leaveChannel}}();}
-\DoxyCodeLine{00050\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a3a2e6fee24f9793645a09a9ac8c25553}{sendMessage}}(std::string\ args);}
-\DoxyCodeLine{00051\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_ae4036743e108c5ac50476d2ef306ffe4}{listMessages}}();}
-\DoxyCodeLine{00052\ \};}
-\DoxyCodeLine{00053\ }
-\DoxyCodeLine{00054\ \textcolor{preprocessor}{\#endif\ \ }\textcolor{comment}{//\ SISTEMA\_H}}
+\DoxyCodeLine{00033\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a118d16dc0bcefb5bbe29bdfd471def2c}{salvar}}();}
+\DoxyCodeLine{00034\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a811a732f691bb1d231ce11458dd42539}{carregar}}();}
+\DoxyCodeLine{00035\ }
+\DoxyCodeLine{00036\ \ \ \ \ \textcolor{comment}{//\ Comandos}}
+\DoxyCodeLine{00037\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a0277e9f6395f90f25827d3a8d55089df}{createUser}}(std::string\ args);}
+\DoxyCodeLine{00038\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a10a2cae24f39154b696c0f3491ee6196}{login}}(std::string\ args);}
+\DoxyCodeLine{00039\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a8a4109e22701b10eeddc0b53ce1a801d}{disconnect}}();}
+\DoxyCodeLine{00040\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_aa882f32bdbd0a9bad1d18d5343a3c20c}{createServer}}(std::string\ args);}
+\DoxyCodeLine{00041\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a9ee65dbd3c18fc0b1f489cadd9884dd3}{setServerDesc}}(std::string\ args);}
+\DoxyCodeLine{00042\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a6789cdac9e0bfa3927a21599afbc427c}{setServerInviteCode}}(std::string\ args);}
+\DoxyCodeLine{00043\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a871f17a5e6f360ed280b3cb2c97a7a49}{listServers}}();}
+\DoxyCodeLine{00044\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a13df10cdd549f93b79aca4b3a30046e7}{removeServer}}(std::string\ nome);}
+\DoxyCodeLine{00045\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_abdaf76b6b392965f647d73c1254e46a9}{enterServer}}(std::string\ args);}
+\DoxyCodeLine{00046\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a7adfe2bf239371ad84e61a90daf6b249}{leaveServer}}();}
+\DoxyCodeLine{00047\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a3621b304dfde121fc15d07c22ac57e7f}{listParticipants}}();}
+\DoxyCodeLine{00048\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_acb0dfef9e94f9a272b7bb793af76133e}{listChannels}}();}
+\DoxyCodeLine{00049\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a822164d7a54102aa37789e3c9d6fd17d}{createChannel}}(std::string\ args);}
+\DoxyCodeLine{00050\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_abe944780158601e61ed0276820ddaeee}{enterChannel}}(std::string\ args);}
+\DoxyCodeLine{00051\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_ac70d6ec3709c158c28e801586a71aab0}{leaveChannel}}();}
+\DoxyCodeLine{00052\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a3a2e6fee24f9793645a09a9ac8c25553}{sendMessage}}(std::string\ args);}
+\DoxyCodeLine{00053\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_ae4036743e108c5ac50476d2ef306ffe4}{listMessages}}();}
+\DoxyCodeLine{00054\ }
+\DoxyCodeLine{00055\ \ \ \ \textcolor{keyword}{private}:}
+\DoxyCodeLine{00056\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a817ea823866d39461d33070b767fc8e6}{salvarUsuarios}}();}
+\DoxyCodeLine{00057\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_a2c089769cc448b35ef28af4fc1edc8d6}{salvarServidores}}();}
+\DoxyCodeLine{00058\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_aa3a447f5b25990c54a913124d3bb59dc}{carregarUsuarios}}();}
+\DoxyCodeLine{00059\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classSistema_aa74c5118001598df07380cf2a05f236e}{carregarServidores}}();}
+\DoxyCodeLine{00060\ \};}
+\DoxyCodeLine{00061\ }
+\DoxyCodeLine{00062\ \textcolor{preprocessor}{\#endif\ \ }\textcolor{comment}{//\ SISTEMA\_H}}
 
 \end{DoxyCode}
