--- a/docs/latex/Usuario_8h_source.tex
+++ b/docs/latex/Usuario_8h_source.tex
@@ -23,11 +23,12 @@
 \DoxyCodeLine{00020\ \ \ \ \ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{classUsuario_af72cadb2cfa815ef3318f2544d1df4ef}{getId}}();}
 \DoxyCodeLine{00021\ \ \ \ \ std::string\ \mbox{\hyperlink{classUsuario_a9fd39b37a8f38cfd990aba2234de9ea0}{getNome}}();}
 \DoxyCodeLine{00022\ \ \ \ \ std::string\ \mbox{\hyperlink{classUsuario_ab47f811619c0f6e26d43f11393f2b143}{getEmail}}();}
-\DoxyCodeLine{00023\ }
-\DoxyCodeLine{00024\ \ \ \ \ \textcolor{comment}{//\ Métodos}}
-\DoxyCodeLine{00025\ \ \ \ \ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{classUsuario_a6737f0bde3f7d08220939e0c9e75aae5}{checarSenha}}(std::string\ \mbox{\hyperlink{classUsuario_a5f324af32e988e55160d5f3651b5d2b1}{senha}});}
-\DoxyCodeLine{00026\ \};}
-\DoxyCodeLine{00027\ }
-\DoxyCodeLine{00028\ \textcolor{preprocessor}{\#endif\ \ }\textcolor{comment}{//\ USUARIO\_H}}
+\DoxyCodeLine{00023\ \ \ \ \ std::string\ \mbox{\hyperlink{classUsuario_afe5b8e2b50dcf24b109357fda3716f7f}{getSenha}}();}
+\DoxyCodeLine{00024\ }
+\DoxyCodeLine{00025\ \ \ \ \ \textcolor{comment}{//\ Métodos}}
+\DoxyCodeLine{00026\ \ \ \ \ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{classUsuario_a6737f0bde3f7d08220939e0c9e75aae5}{checarSenha}}(std::string\ \mbox{\hyperlink{classUsuario_a5f324af32e988e55160d5f3651b5d2b1}{senha}});}
+\DoxyCodeLine{00027\ \};}
+\DoxyCodeLine{00028\ }
+\DoxyCodeLine{00029\ \textcolor{preprocessor}{\#endif\ \ }\textcolor{comment}{//\ USUARIO\_H}}
 
 \end{DoxyCode}
