--- a/docs/latex/classUsuario.tex
+++ b/docs/latex/classUsuario.tex
@@ -23,6 +23,9 @@ std\+::string {\bfseries get\+Nome} ()
 \mbox{\Hypertarget{classUsuario_ab47f811619c0f6e26d43f11393f2b143}\label{classUsuario_ab47f811619c0f6e26d43f11393f2b143}} 
 std\+::string {\bfseries get\+Email} ()
 \begin{DoxyCompactList}\small\item\em Retorna o email do usuário. \end{DoxyCompactList}\item 
+\mbox{\Hypertarget{classUsuario_afe5b8e2b50dcf24b109357fda3716f7f}\label{classUsuario_afe5b8e2b50dcf24b109357fda3716f7f}} 
+std\+::string {\bfseries get\+Senha} ()
+\begin{DoxyCompactList}\small\item\em Retorna a senha do usuário. \end{DoxyCompactList}\item 
 bool \mbox{\hyperlink{classUsuario_a6737f0bde3f7d08220939e0c9e75aae5}{checar\+Senha}} (std\+::string \mbox{\hyperlink{classUsuario_a5f324af32e988e55160d5f3651b5d2b1}{senha}})
 \begin{DoxyCompactList}\small\item\em Verifica se a senha passada é correta. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Atributos Privados}
