--- a/docs/latex/md_README.tex
+++ b/docs/latex/md_README.tex
@@ -1,7 +1,7 @@
 Projeto de \char`\"{}\+Linguagem de Programação I\char`\"{}\hypertarget{md_README_autotoc_md1}{}\doxysection{Descrição}\label{md_README_autotoc_md1}
-Esse projeto é uma \char`\"{}imitação\char`\"{} do \href{https://www.discord.com}{\texttt{ {\bfseries{Discord}}}}, feita em C++. Esse repositório contém as versões 1 e 2 do projeto.
+Esse projeto é uma \char`\"{}imitação\char`\"{} do \href{https://www.discord.com}{\texttt{ {\bfseries{Discord}}}}, feita em C++. Esse repositório contém as versões 1, 2 e 3 do projeto.
 
-Na versão 1, é possível fazer login, criar, configurar e entrar em servidores. A versão 2 adiciona as funcionalidades de canais, permitindo criar canais de texto e voz dentro de um servidor, e enviar mensagens neles.\hypertarget{md_README_autotoc_md2}{}\doxysection{Autoria}\label{md_README_autotoc_md2}
+Na versão 1, é possível fazer login, criar, configurar e entrar em servidores. A versão 2 adiciona as funcionalidades de canais, permitindo criar canais de texto e voz dentro de um servidor, e enviar mensagens neles. A versão 3 adiciona funcionalidades de salvar e carregar, permitindo que o programa guarde informações mesmo após ser encerrado. Também é possível rodar o programa em dois terminais simultaneamente.\hypertarget{md_README_autotoc_md2}{}\doxysection{Autoria}\label{md_README_autotoc_md2}
 O projeto foi feito por Pedro Vinícius Oliveira Maciel Pinho.\hypertarget{md_README_autotoc_md3}{}\doxysection{Comandos}\label{md_README_autotoc_md3}
 \hypertarget{md_README_autotoc_md4}{}\doxysubsection{Deslogados}\label{md_README_autotoc_md4}
 Esses comandos podem ser executados caso o usuário não esteja logado.
@@ -36,7 +36,7 @@ Esses comandos só podem ser executados dentro de um servidor.
 \item {\ttfamily leave-\/server} sai do servidor.
 \item {\ttfamily list-\/participants} lista os participantes do servidor.
 \end{DoxyItemize}\hypertarget{md_README_autotoc_md8}{}\doxysubsection{Canais}\label{md_README_autotoc_md8}
-Esses comandos só podem ser executados dentro de um canal.
+Esses comandos são relacionados a funcionalidades dos canais.
 
 
 \begin{DoxyItemize}
@@ -44,8 +44,9 @@ Esses comandos só podem ser executados dentro de um canal.
 \item {\ttfamily list-\/channels} lista todos os canais do servidor.
 \item {\ttfamily enter-\/channel \texorpdfstring{$<$}{<}nome\texorpdfstring{$>$}{>}} entra em um canal.
 \item {\ttfamily send-\/message \texorpdfstring{$<$}{<}conteúdo\texorpdfstring{$>$}{>}} envia uma mensagem. É necessário estar em um canal para enviar mensagens.
-\item {\ttfamily list-\/messages} lista as mensagens do canal atual\`{}. É necessário estar em um canal para enviar mensagens.
-\end{DoxyItemize}\hypertarget{md_README_autotoc_md9}{}\doxysection{Compilação e execução}\label{md_README_autotoc_md9}
+\item {\ttfamily list-\/messages} lista as mensagens do canal atual\`{}. É necessário estar em um canal para listar mensagens.
+\end{DoxyItemize}\hypertarget{md_README_autotoc_md9}{}\doxysection{Arquivo de salvamento padrão}\label{md_README_autotoc_md9}
+A pasta \mbox{[}{\bfseries{data}}\mbox{]}(data) contém arquivos com informações de salvamento. Ao executar o programa, as informações são lidas do arquivo. Se quiser remover o conteúdo salvo, apague o conteúdo de ambos arquivos e substitua por uma única linha contendo {\ttfamily 0}.\hypertarget{md_README_autotoc_md10}{}\doxysection{Compilação e execução}\label{md_README_autotoc_md10}
 Para compilar o programa, é utilizado o \href{https://cmake.org}{\texttt{ {\bfseries{CMake}}}}.
 
 Na pasta principal do projeto, execute os comandos a seguir\+:
@@ -56,62 +57,6 @@ Na pasta principal do projeto, execute os comandos a seguir\+:
 \item {\ttfamily cmake -\/-\/build build} para compilar o programa
 \end{DoxyItemize}
 
-Após a compilação, o programa pode ser executado com {\ttfamily ./build/program}.
-
-Para utilizar o script de exemplo, explicado abaixo, utilize o comando {\ttfamily ./build/program \texorpdfstring{$<$}{<} script.\+txt}\hypertarget{md_README_autotoc_md10}{}\doxysection{Script de exemplo}\label{md_README_autotoc_md10}
-O repositório contém um \href{script.txt}{\texttt{ {\bfseries{script}}}} de exemplo, que contém comandos para demonstrar as funcionalidades do programa.
-
-A seguir, está a explicação de cada linha do script\+:
-
-
-\begin{DoxyCode}{0}
-\DoxyCodeLine{create-\/user\ email1\ password1\ name1\ \ \ \ \ \ \ \ \ \ \ \ \#\ cria\ o\ usuário\ 1}
-\DoxyCodeLine{create-\/user\ email2\ password2\ name2\ \ \ \ \ \ \ \ \ \ \ \ \#\ cria\ o\ usuário\ 2}
-\DoxyCodeLine{create-\/user\ email3\ password3\ name3\ \ \ \ \ \ \ \ \ \ \ \ \#\ cria\ o\ usuário\ 3}
-\DoxyCodeLine{login\ email1\ password1\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ faz\ login\ no\ usuário\ 1}
-\DoxyCodeLine{create-\/server\ server1\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ cria\ o\ servidor\ 1}
-\DoxyCodeLine{set-\/server-\/desc\ server1\ "{}server1\ description"{}\ \#\ altera\ a\ descrição\ do\ servidor}
-\DoxyCodeLine{set-\/server-\/invite-\/code\ server1\ invitecode\ \ \ \ \ \#\ adiciona\ o\ código\ de\ convite}
-\DoxyCodeLine{enter-\/server\ server1\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ entra\ no\ servidor\ 1}
-\DoxyCodeLine{create-\/channel\ canal1\ texto\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ cria\ o\ canal\ de\ texto\ 1}
-\DoxyCodeLine{create-\/channel\ canal2\ voz\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ cria\ o\ canal\ de\ voz\ 2}
-\DoxyCodeLine{create-\/channel\ canal3\ texto\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ cria\ o\ canal\ de\ texto\ 3\ }
-\DoxyCodeLine{enter-\/channel\ canal1\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ entra\ no\ canal\ de\ texto\ 1}
-\DoxyCodeLine{send-\/message\ mensagem1\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ envia\ mensagem}
-\DoxyCodeLine{send-\/message\ mensagem2\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ envia\ mensagem}
-\DoxyCodeLine{leave-\/channel\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ sai\ do\ canal}
-\DoxyCodeLine{leave-\/server\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ sai\ do\ servidor}
-\DoxyCodeLine{disconnect\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ desconecta\ do\ sistema}
-\DoxyCodeLine{login\ email2\ password2\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ faz\ login\ no\ usuário\ 2}
-\DoxyCodeLine{list-\/servers\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ lista\ os\ servidores\ (servidor\ 1)}
-\DoxyCodeLine{create-\/server\ server2\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ cria\ o\ servidor\ 2}
-\DoxyCodeLine{enter-\/server\ server1\ invitecode\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ entra\ no\ servidor\ 1\ com\ o\ código}
-\DoxyCodeLine{list-\/participants\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ lista\ os\ participantes\ (usuários\ 1\ e\ 2)}
-\DoxyCodeLine{list-\/channels\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ lista\ os\ canais}
-\DoxyCodeLine{enter-\/channel\ canal1\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ entra\ no\ canal\ de\ texto\ 1}
-\DoxyCodeLine{list-\/messages\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ lista\ as\ mensagens}
-\DoxyCodeLine{send-\/message\ mensagem3\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ envia\ mensagem}
-\DoxyCodeLine{leave-\/channel\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ sai\ do\ canal}
-\DoxyCodeLine{enter-\/channel\ canal2\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ entra\ no\ canal\ de\ voz\ 2}
-\DoxyCodeLine{send-\/message\ mensagem4\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ envia\ mensagem\ 4}
-\DoxyCodeLine{list-\/messages\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ lista\ mensagem\ 4}
-\DoxyCodeLine{send-\/message\ mensagem5\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ envia\ mensagem\ 5}
-\DoxyCodeLine{list-\/messages\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ lista\ apenas\ mensagem\ 5}
-\DoxyCodeLine{leave-\/channel\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ sai\ do\ canal}
-\DoxyCodeLine{disconnect\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ desconecta\ do\ sistema}
-\DoxyCodeLine{login\ email3\ password3\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ faz\ login\ no\ usuário\ 3}
-\DoxyCodeLine{list-\/servers\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ lista\ os\ servidores\ (servidores\ 1\ e\ 2)}
-\DoxyCodeLine{enter-\/server\ server1\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ tenta\ entrar\ no\ servidor\ 1\ sem\ o\ código\ (falha)}
-\DoxyCodeLine{enter-\/server\ server2\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ entra\ no\ servidor\ 2}
-\DoxyCodeLine{list-\/participants\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ lista\ os\ participantes\ (usuário\ 3)}
-\DoxyCodeLine{disconnect\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ desconecta\ do\ sistema}
-\DoxyCodeLine{login\ email1\ password1\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ faz\ login\ no\ usuário\ 1}
-\DoxyCodeLine{remove-\/server\ server1\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ apaga\ o\ servidor\ 1}
-\DoxyCodeLine{list-\/servers\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ lista\ os\ servidores\ (servidor\ 2)}
-\DoxyCodeLine{disconnect\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ desconecta\ do\ sistema}
-\DoxyCodeLine{quit\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \#\ encerra\ o\ programa}
-
-\end{DoxyCode}
-\hypertarget{md_README_autotoc_md11}{}\doxysection{Limitações}\label{md_README_autotoc_md11}
+Após a compilação, o programa pode ser executado com {\ttfamily ./build/program}.\hypertarget{md_README_autotoc_md11}{}\doxysection{Limitações}\label{md_README_autotoc_md11}
 O programa não verifica se o número de argumentos está correto para cada comando. Por exemplo, se um usuário digitar {\ttfamily create-\/user \texorpdfstring{$<$}{<}email\texorpdfstring{$>$}{>} \texorpdfstring{$<$}{<}senha\texorpdfstring{$>$}{>}}, e não especificar o nome do usuário, o programa criará um usuário com email e senha, mas com o nome vazio, ao invés de causar um erro.\hypertarget{md_README_autotoc_md12}{}\doxysection{Documentação}\label{md_README_autotoc_md12}
 A documentação feita com \href{https://doxygen.nl}{\texttt{ {\bfseries{Doxygen}}}} está disponível na pasta \mbox{[}{\bfseries{docs}}\mbox{]}(docs). Para acessá-\/la, abra o arquivo \href{docs/html/index.html}{\texttt{ {\bfseries{index.\+html}}}} utilizando um navegador. 
